--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>首页</title>
-    <link rel="stylesheet" href="../sass/index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1499690_47pnwji8y13.css">
     <link rel="stylesheet" href="../layui/css/layui.css">
 </head>
@@ -324,7 +324,8 @@
                 <li>
                     <a href="">
                         <img src="../img/seven.png" alt="">
-                        <p>7X9小时在线服务</p>
+                        <p>7天内退货</p>
+                        <p>购物满199元免运费</p>
                     </a>
                 </li>
                 <li>
@@ -363,6 +364,13 @@
         <div class="footerTop">
             <p>Copyright 2007 - 2020 vancl.com All Rights Reserved 京ICP证100557号 京公网安备11011502002400号 出版物经营许可证新出发京批字第直110138号</p>
             <p>凡客诚品（北京）科技有限公司</p>
+        </div>
+        <div class="footerbot">
+            <a href="" class="redlogo"></a>
+            <span class="cnga"></span>
+            <a href="" class="jiaoyi"></a>
+            <a href="" class="msg"></a>
+            <a href="" class="flow"></a>
         </div>
     </div>
 </body>
