--- a/html/index.html
+++ b/html/index.html
@@ -375,6 +375,7 @@
     </div>
 </body>
 <script src="../layui/layui.js"></script>
+<script src="../jquery-1.11.3.js"></script>
 <script>
     layui.use('carousel', function () {
         var carousel = layui.carousel;
@@ -388,6 +389,13 @@
             //,anim: 'updown' //切换动画方式
         });
     });
+    
+    $('li').mouseover(function(){
+        $('.dh').animate({
+            height:500,
+        },1000)
+    })
+
 </script>
 
 </html>
