--- a/html/user-register.html
+++ b/html/user-register.html
@@ -7,16 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>用户注册</title>
     <link rel="stylesheet" href="../css/resgiter.css">
+    <link rel="stylesheet" href="../layui/css/layui.css">
 </head>
 
 <body>
     <div class="logo">
         <img src="../img/logo_new.jpg" alt="">
     </div>
-    <form action="" id="myform">
+    <div id="myform">
         <div class="regist">
             <h2>注册新用户
-                <span>我已经注册，现在就 <a href="">登录</a></span>
+                <span>我已经注册，现在就 <a href="./user-login.html">登录</a></span>
             </h2>
             <div style="width: 100%; height: 10px; overflow: hidden; clear: both;">
             </div>
@@ -24,34 +25,30 @@
                 <img src="../img/login120412_newlogo.jpg" alt="">
             </div>
             <div class="content-right">
-                <input type="text" placeholder="验证码">
-                <span></span>
-                <input type="text" placeholder="请输入手机号">
+                <input id="num" type="text" placeholder="验证码">
+                <span id="yzm"></span>
+                <div id="tip"></div>
+                <input id="tel" type="text" placeholder="请输入手机号">
+                <div id="tip"></div>
+                <input id="password" type="password" placeholder="设定登录密码">
+                <div id="tip"></div>
+                <input type="password" id="upassword" placeholder="再次输入密码">
+                <div id="tip"></div>
+                <div class="tiaokuan">
+                    <input type="checkbox" id="chk">
+                    <label>请阅读
+                        <a href="">《VANCL凡客诚品服务条款》</a>
+                    </label>
+                </div>
+                <button id="btn" disabled>立即注册</button>
             </div>
         </div>
-
-    </form>
+    </div>
+    <div class="bottom">
+    </div>
 </body>
 <script src="../jquery-1.11.3.js"></script>
-<script>
-    var code;
-    function createCode() {
-        code = '';
-        var codeLength = 6;
-        var codeV = $(".content-right span");
-
-        var random = new Array(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z');
-        for (var i = 0; i < codeLength; i++) {
-            var index = Math.floor(Math.random() * 36)
-            code += random[index];
-        }
-        codeV.text(code);
-    }
-    createCode();
-    $(".content-right span").bind('click', function () {
-        createCode();
-    });
-
-</script>
+<script src="../layui/layui.js"></script>
+<script src="../js/resgiter.js" type="module"></script>
 
 </html>
