--- a/html/head.html
+++ b/html/head.html
@@ -2,9 +2,9 @@
     <div class="headerTop">
         <div class="headNav">
             <div class="headLeft">
-                <span>您好，欢迎光临凡客诚品！</span>
-                <a href="">登录&nbsp; </a>|
-                <a href="">注册</a>
+                <span>您好，<span id="username"></span>欢迎光临凡客诚品！</span>
+                <a id="login" class="no" href="./user-login.html">登录&nbsp; </a>|
+                <a id="zhuce" class="no" href="./user-login.html">注册</a>
                 <a href="">我的订单</a>
                 <a href="" class="a1">
                     网站公告</a>
@@ -21,8 +21,8 @@
         <div id="ss">
             <div class="serchTop">
                 <div class="serch">
-                    <input type="text" placeholder="搜“帆布鞋”，体验与众不同">
-                    <button>搜索</button>
+                    <input id="inp" type="text" placeholder="搜“帆布鞋”，体验与众不同">
+                    <button id="but">搜索</button>
                 </div>
                 <div class="shop">
                     <span class="iconfont icon-gouwuche"></span>
@@ -47,7 +47,7 @@
                 <a href=""></a>
             </li>
             <li>
-                <a href="">首页</a>
+                <a href="./index.html">首页</a>
             </li>
             <li>
                 <a href="">新品</a>
