--- a/html/goodslist.html
+++ b/html/goodslist.html
@@ -13,7 +13,142 @@
 
 <body>
     <div class="Head">
-
+        <div class="head">
+            <div class="headerTop">
+                <div class="headNav">
+                    <div class="headLeft">
+                        <span>您好，<span id="username"></span>欢迎光临凡客诚品！</span>
+                        <span id="tt">退出</span>
+                        <a id="login" class="no" href="./user-login.html">登录&nbsp; </a>|
+                        <a class="no" href="./user-register.html">注册</a>
+                        <a href="">我的订单</a>
+                        <a href="" class="a1">
+                            网站公告</a>
+                        <a href="" class="a2">
+                            <img src="http://i1.vanclimg.com/cms/20150605/w1.jpg" alt="">
+                        </a>
+                        <a href="" class="a3">
+                            <img src="http://i2.vanclimg.com/cms/20150605/w2.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="sousuo">
+                <div id="ss">
+                    <div class="serchTop">
+                        <div class="serch">
+                            <input id="inp" type="text" placeholder="搜“帆布鞋”，体验与众不同">
+                            <button id="but">搜索</button>
+                        </div>
+                        <div class="shop">
+                            <span class="iconfont icon-gouwuche"></span>
+                            <a href="">购物车(
+                                <span>0</span>)
+                            </a>
+                        </div>
+                    </div>
+                    <p>热门搜索：
+                        <a href="">免烫衬衫</a>
+                        <a href="">羽绒服</a>
+                        <a href="">外套</a>
+                        <a href="">熊本熊</a>
+                        <a href="">运动户外</a>
+                        <a href="">帆布鞋</a>
+                    </p>
+                </div>
+            </div>
+            <div id="nav">
+                <ul>
+                    <li class="logo">
+                        <a href=""></a>
+                    </li>
+                    <li>
+                        <a href="./index.html">首页</a>
+                    </li>
+                    <li>
+                        <a href="">新品</a>
+                        <div class="dh">
+        
+                        </div>
+                    </li>
+                    <li>
+                        <a href="">衬衫</a>
+                        <div class="dh">
+                            <a href="">免烫</a>
+                            <a href="">易打理</a>
+                            <a href="">休闲</a>
+                            <a href="">高支</a>
+                            <a href="">法兰绒</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="">卫衣</a>
+                        <div class="dh">
+                            <a href="">熊本熊</a>
+                            <a href="">创可贴</a>
+                            <a href="">开衫</a>
+                            <a href="">连帽</a>
+                            <a href="">圆领</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="">女装</a>
+                        <div class="dh">
+                            <a href="">大衣</a>
+                            <a href="">针织衫</a>
+                            <a href="">鞋品</a>
+                            <a href="">袜品</a>
+                            <a href="">家居配饰</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="">羽绒服</a>
+                        <div class="dh">
+                            <a href="">羽绒服</a>
+                            <a href="">大衣</a>
+                            <a href="">夹克</a>
+                            <a href="">西服</a>
+                            <a href="">C9设计款</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="">针织衫</a>
+                        <div class="dh">
+                            <a href="">棉线衫</a>
+                            <a href="">羊毛衫</a>
+                            <a href="">空调衫</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="">裤装</a>
+                        <div class="dh">
+                            <a href="">针织裤</a>
+                            <a href="">休闲裤</a>
+                            <a href="">工装裤</a>
+                            <a href="">牛仔裤</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="">鞋</a>
+                        <div class="dh">
+                            <a href="">复古跑鞋</a>
+                            <a href="">帆布鞋</a>
+                            <a href="">休闲鞋</a>
+                            <a href="">运动鞋</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="">家居配饰</a>
+                        <div class="dh">
+                            <a href="">内衣袜品</a>
+                            <a href="">家居服</a>
+                            <a href="">家居鞋</a>
+                            <a href="">手机壳</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
     <div class="content">
         <div class="top">
@@ -141,5 +276,6 @@
 </body>
 <script src="../jquery-1.11.3.js"></script>
 <script src="../js/goods_list.js" type="module"></script>
+<script src="../js/head.js" type="module"></script>
 
 </html>
