--- a/html/index.html
+++ b/html/index.html
@@ -16,9 +16,10 @@
         <div class="headerTop">
             <div class="headNav">
                 <div class="headLeft">
-                    <span>您好，欢迎光临凡客诚品！</span>
-                    <a href="">登录&nbsp; </a>|
-                    <a href="">注册</a>
+                    <span>您好，<span id="username"></span>欢迎光临凡客诚品！</span>
+                    <span id="tt">退出</span>
+                    <a id="login" class="no" href="./user-login.html">登录&nbsp; </a>|
+                    <a class="no" href="./user-register.html">注册</a>
                     <a href="">我的订单</a>
                     <a href="" class="a1">
                         网站公告</a>
@@ -61,16 +62,16 @@
                     <a href=""></a>
                 </li>
                 <li>
-                    <a href="">首页</a>
+                    <a href="./index.html">首页</a>
                 </li>
                 <li>
-                    <a href="">新品</a>
+                    <a href="./goodslist.html">新品</a>
                     <div class="dh">
 
                     </div>
                 </li>
                 <li>
-                    <a href="">衬衫</a>
+                    <a href="./goodslist.html">衬衫</a>
                     <div class="dh">
                         <a href="">免烫</a>
                         <a href="">易打理</a>
@@ -80,7 +81,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="">卫衣</a>
+                    <a href="./goodslist.html">卫衣</a>
                     <div class="dh">
                         <a href="">熊本熊</a>
                         <a href="">创可贴</a>
@@ -90,7 +91,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="">女装</a>
+                    <a href="./goodslist.html">女装</a>
                     <div class="dh">
                         <a href="">大衣</a>
                         <a href="">针织衫</a>
@@ -100,7 +101,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="">羽绒服</a>
+                    <a href="./goodslist.html">羽绒服</a>
                     <div class="dh">
                         <a href="">羽绒服</a>
                         <a href="">大衣</a>
@@ -110,7 +111,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="">针织衫</a>
+                    <a href="./goodslist.html">针织衫</a>
                     <div class="dh">
                         <a href="">棉线衫</a>
                         <a href="">羊毛衫</a>
@@ -118,7 +119,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="">裤装</a>
+                    <a href="./goodslist.html">裤装</a>
                     <div class="dh">
                         <a href="">针织裤</a>
                         <a href="">休闲裤</a>
@@ -127,7 +128,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="">鞋</a>
+                    <a href="goodslist.html">鞋</a>
                     <div class="dh">
                         <a href="">复古跑鞋</a>
                         <a href="">帆布鞋</a>
@@ -136,7 +137,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="">家居配饰</a>
+                    <a href="./goodslist.html">家居配饰</a>
                     <div class="dh">
                         <a href="">内衣袜品</a>
                         <a href="">家居服</a>
@@ -376,6 +377,7 @@
 </body>
 <script src="../layui/layui.js"></script>
 <script src="../jquery-1.11.3.js"></script>
+<script src="../js/head.js" type="module"></script>
 <script>
     layui.use('carousel', function () {
         var carousel = layui.carousel;
