--- a/html/goodslist.html
+++ b/html/goodslist.html
@@ -42,7 +42,7 @@
                         </div>
                         <div class="shop">
                             <span class="iconfont icon-gouwuche"></span>
-                            <a href="">购物车(
+                            <a href="./gouwuche.html">购物车(
                                 <span>0</span>)
                             </a>
                         </div>
