--- a/html/listpage.html
+++ b/html/listpage.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/listpage.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/head.css">
+    <link rel="stylesheet" href="../layui/css/layui.css">
 </head>
 
 <body>
@@ -42,7 +43,7 @@
                         </div>
                         <div class="shop">
                             <span class="iconfont icon-gouwuche"></span>
-                            <a href="">购物车(
+                            <a href="./gouwuche.html">购物车(
                                 <span>0</span>)
                             </a>
                         </div>
@@ -66,13 +67,13 @@
                         <a href="./index.html">首页</a>
                     </li>
                     <li>
-                        <a href="">新品</a>
+                        <a href="./goodslist.html">新品</a>
                         <div class="dh">
 
                         </div>
                     </li>
                     <li>
-                        <a href="">衬衫</a>
+                        <a href="./goodslist.html">衬衫</a>
                         <div class="dh">
                             <a href="">免烫</a>
                             <a href="">易打理</a>
@@ -82,7 +83,7 @@
                         </div>
                     </li>
                     <li>
-                        <a href="">卫衣</a>
+                        <a href="./goodslist.html">卫衣</a>
                         <div class="dh">
                             <a href="">熊本熊</a>
                             <a href="">创可贴</a>
@@ -92,7 +93,7 @@
                         </div>
                     </li>
                     <li>
-                        <a href="">女装</a>
+                        <a href="./goodslist.html">女装</a>
                         <div class="dh">
                             <a href="">大衣</a>
                             <a href="">针织衫</a>
@@ -102,7 +103,7 @@
                         </div>
                     </li>
                     <li>
-                        <a href="">羽绒服</a>
+                        <a href="./goodslist.html">羽绒服</a>
                         <div class="dh">
                             <a href="">羽绒服</a>
                             <a href="">大衣</a>
@@ -112,7 +113,7 @@
                         </div>
                     </li>
                     <li>
-                        <a href="">针织衫</a>
+                        <a href="./goodslist.html">针织衫</a>
                         <div class="dh">
                             <a href="">棉线衫</a>
                             <a href="">羊毛衫</a>
@@ -120,7 +121,7 @@
                         </div>
                     </li>
                     <li>
-                        <a href="">裤装</a>
+                        <a href="./goodslist.html">裤装</a>
                         <div class="dh">
                             <a href="">针织裤</a>
                             <a href="">休闲裤</a>
@@ -129,7 +130,7 @@
                         </div>
                     </li>
                     <li>
-                        <a href="">鞋</a>
+                        <a href="./goodslist.html">鞋</a>
                         <div class="dh">
                             <a href="">复古跑鞋</a>
                             <a href="">帆布鞋</a>
@@ -138,7 +139,7 @@
                         </div>
                     </li>
                     <li>
-                        <a href="">家居配饰</a>
+                        <a href="./goodslist.html">家居配饰</a>
                         <div class="dh">
                             <a href="">内衣袜品</a>
                             <a href="">家居服</a>
@@ -203,6 +204,7 @@
     </div>
 </body>
 <script src="../jquery-1.11.3.js"></script>
+<script src="../layui/layui.js"></script>
 <script src="../js/listpage.js" type="module"></script>
 <script src="../js/head.js" type="module"></script>
 
