--- a/html/goodslist.html
+++ b/html/goodslist.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../css/head.css">
     <link rel="stylesheet" href="../css/list.css">
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/bottom.css">
+    <link rel="stylesheet" href="../layui/css/layui.css">
 </head>
 
 <body>
@@ -275,6 +277,7 @@
     
 </body>
 <script src="../jquery-1.11.3.js"></script>
+<script src="../layui/layui.js"></script>
 <script src="../js/goods_list.js" type="module"></script>
 <script src="../js/head.js" type="module"></script>
 
