--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1499690_47pnwji8y13.css">
     <link rel="stylesheet" href="../layui/css/layui.css">
+    <link rel="stylesheet" href="../css/bottom.css">
 </head>
 
 <body>
