--- a/html/goodslist.html
+++ b/html/goodslist.html
@@ -212,6 +212,7 @@
                     </a>
                 </li> -->
             </ul>
+            <div id="pagation"></div>
         </div>
         <div class="foot">
             <div class="footer">
@@ -280,5 +281,4 @@
 <script src="../layui/layui.js"></script>
 <script src="../js/goods_list.js" type="module"></script>
 <script src="../js/head.js" type="module"></script>
-
 </html>
