--- a/html/jiesuan.html
+++ b/html/jiesuan.html
@@ -66,6 +66,7 @@
                             <li>
                                 <div id="baocun">保存并配送到这个地址</div>
                             </li>
+                            <span id="x">X</span>
                         </ol>
                     </div>
                 </section>
@@ -112,7 +113,7 @@
                 </tr>
             </thead>
             <tbody>
-                    <!-- <tr>
+                <!-- <tr>
                         <td class="name">
                             <a target="_blank" href="http://item.vancl.com/6386717.html?ref=hp-hp-syms-1_3-v:n">针织衫开衫 棉线可机洗 男款 黑色</a>
                         </td>
@@ -139,9 +140,14 @@
         </table>
         <div class="zhifu">
             <h4>您已支付：<span>￥0.00</span>，您还需支付<span id="heji">￥178.00元</span></h4>
-          </div>
+        </div>
+        <div class="order">
+            <button id="btn">提交订单</button>
+            <div>祝您下单愉快，普通商品签收之日起7天内，可享受7天无理由退货</div>
+            
+        </div>
     </div>
-    
+
     <div class="fot">
 
     </div>
