--- a/html/user-login.html
+++ b/html/user-login.html
@@ -22,10 +22,10 @@
         <div class="login_1">
             <p>免费登录</p>
             <div id="name">
-                <input id="uname" type="text" placeholder="请输入用户名或手机号">
+                <input id="uname" type="text" placeholder="请输入用户名或手机号" value="18507198387">
             </div>
             <div id="name">
-                <input id="upassword" type="text" placeholder="请输入密码">
+                <input id="upassword" type="text" placeholder="请输入密码" value="123456">
             </div>
             <div class="bt">
                 <a href="">忘记密码</a>
