--- a/html/head.html
+++ b/html/head.html
@@ -26,9 +26,7 @@
                 </div>
                 <div class="shop">
                     <span class="iconfont icon-gouwuche"></span>
-                    <a href="">购物车(
-                        <span>0</span>)
-                    </a>
+                    <a href="">购物车</a>
                 </div>
             </div>
             <p>热门搜索：
