--- a/html/index.html
+++ b/html/index.html
@@ -42,9 +42,7 @@
                     </div>
                     <div class="shop">
                         <span class="iconfont icon-gouwuche"></span>
-                        <a href="./gouwuche.html">购物车(
-                            <span>0</span>)
-                        </a>
+                        <a href="./gouwuche.html">购物车</a>
                     </div>
                 </div>
                 <p>热门搜索：
